<resources>
    <!--Sign In activity-->
    <string name="app_name">Twitterati</string>
    <string name="image_background_signin">Twitterati background image</string>
    <string name="signin_problem">There seems to be problem logging in!</string>

    <!--Home activity-->
    <string name="desc_user_pic">Display picture of user</string>
    <string name="title_activity_home">Feeds</string>

    <!--Drawer-->
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_profile">Profile</string>
    <string name="nav_timeline">Timeline</string>
    <string name="nav_search">Search</string>
    <string name="nav_settings">Settings</string>
    <string name="nav_help">Help</string>

    <!--Menu-->
    <string name="menu_report">Report error</string>
    <string name="menu_logout">Log out</string>
    <string name="menu_refresh">Refresh</string>
    <string name="menu_search">Search</string>
    <string name="menu_search_hint">Search Twitter</string>

    <!--Search activity-->
    <string name="title_activity_search">Search</string>
    <string name="no_results">Search tweets, people and more</string>

    <!--Timeline activity-->
    <string name="title_activity_timeline">Timeline</string>
    <string name="no_tweet">Your tweets!</string>
    <string name="title_activity_tweet">TweetActivity</string>

    <!--Tweet viewer-->
    <string name="close_activity">Close</string>
</resources>
